--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -77,7 +77,7 @@ div.note {
 	background: #eee;
 	padding: .2cm;
 	text-align: center;
-	margin: 0 4em 0 4em;
+	margin: 1px 4em 1px 4em;
 }
 
 div.note h3 {
