--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -53,6 +53,14 @@ h1 {
 	text-align: center;
 }
 
+h2:first-child {
+	margin-top: 1em;
+}
+
+h2 {
+	margin-top: 4em;
+}
+
 th {
 	text-align: left;
 }
