Fix styling for short pages.

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,7 +1,13 @@
+html {
+	color: black;
+	background: #efc696;
+}
+
 body {
 	padding: 0;
 	margin: 0;
 	border: 0;
+	background: white;
 }
 
 div.main {
