--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -155,3 +155,8 @@ div.heading p.thanks {
 	font-size: small;
 	color: #836d52;
 }
+
+table          { border-collapse: collapse; }
+*#col1         { border-right: 3px solid #888; }
+td, th { padding: 1em; }
+th { border-bottom: 1px solid #888; }
