--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,6 +1,6 @@
 html {
 	color: black;
-	background: #efc696;
+	background: white;
 }
 
 body {
@@ -8,68 +8,34 @@ body {
 	margin: 0;
 	border: 0;
 	background: white;
+	color: black;
 }
 
 div.main {
-	padding: 0.5cm;
+	padding: 0 2em 0 2em;
 	max-width: 100em;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-div.heading p {
+p.author {
 	text-align: right;
-}
-div.heading p.author a:hover {
-	background: #ffefa1;
-}
-
-div.heading div {
-	text-align: center;
-}
-
-div.pages {
-	margin-bottom: 4px;
-}
-
-div.pages span {
-	border: 1px solid #c17419;
-}
-
-div.pages a {
-	text-decoration: none;
-	color: blue;
-}
-
-div.pages span + span {
-	border-left: 0;
-}
-
-div.heading span.selected {
-	background: #ffefa1;
-}
-div.heading span.selected:hover {
-	background: #ffefa1;
-}
-
-div.heading span:hover {
-	background: #d9a05c;
 }
 
 div.heading {
-	color: black;
-	background: #efc696;
 	margin: 0;
 	padding: 1em;
 	border: 0;
 }
 
 div.main a:hover {
-	background: yellow;
+	background: #ffefa1;
 }
 
 h1 {
-	text-align: center;
+	padding: 0;
+	margin: 0 0 0 1em;
+	text-align: left;
 }
 
 h2:first-child {
@@ -132,6 +98,10 @@ pre {
 	padding: 0.2cm;
 }
 
+div.heading img {
+	margin: .3em;
+}
+
 img {
 	border: none;
 }
@@ -160,3 +130,64 @@ table          { border-collapse: collapse; }
 *#col1         { border-right: 3px solid #888; }
 td, th { padding: 1em; }
 th { border-bottom: 1px solid #888; }
+
+table.frontpage {
+	width: 100%;
+}
+table.frontpage *#col1 { border-right: 4px dashed #aaa; }
+table.frontpage th { border-bottom: 4px dashed #aaa; }
+
+div.navbar {
+	margin-left: 2em;
+	margin-right: 2em;
+	text-align: center;
+	background: #def;
+	border-top: 1px solid #88f;
+	border-bottom: 1px solid #88f;
+}
+
+div.navbar a {
+	text-decoration: none;
+	padding-left: .8em;
+	padding-right: .8em;
+	padding: 0;
+}
+
+div.navbar a.selected {
+	background: #88f;
+	color: white;
+}
+
+div.navbar a:hover {
+	background: #88f;
+	color: white;
+}
+
+div.navbar a {
+	color: #008;
+}
+
+div.navbar span {
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
+div.footer {
+	border-top: 1px solid #888;
+	font-size: smaller;
+	text-align: center;
+	color: #444;
+	margin: 2em 2em 1em 2em;
+}
+
+dl.spaced {
+	margin: 2em;
+}
+
+dl.spaced dt {
+	margin-top: 1em;
+}
+
+dl.spaced dd {
+	margin-top: .2em;
+}
