--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -217,3 +217,9 @@ div.figure p {
 	padding: 0;
 	margin: 0 1em 0.5em 1em;
 }
+
+span.note {
+	border: 1px solid black;
+	background: #ffefa1;
+	padding: .5em;
+}
