--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -25,6 +25,7 @@ h2:first-child {
 
 h2 {
 	margin-top: 4em;
+	border-bottom: 1px dashed #88f;
 }
 
 p.q {
@@ -189,11 +190,10 @@ td.sidebar a:hover {
 }
 
 div.footer {
-	border-top: 1px solid #888;
 	font-size: smaller;
 	text-align: center;
 	color: #222;
-	margin: 2em 2em 1em 2em;
+	margin: 8em 2em 1em 2em;
 	clear: both;
 }
 
